use mpfr_init2 to ensure the precision isn't lost on string to float conversion

BUG: 460232